lesson8/deployment/myhttpserver-all.yaml
#create deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhttpserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myhttpserver
  template:
    metadata:
      labels:
        app: myhttpserver
    spec:
      containers:
        - name: myhttpserver
          image: yyyen01/myhttpserver:latest
          #gracefully start up configuration
          readinessProbe:
            httpGet:
            ### this probe will fail with 404 error code
            ### only httpcode between 200-400 is retreated as success
              path: /healthz
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          livenessProbe:
            exec:
              command:
                - ls
                - /config
            initialDelaySeconds: 10
            periodSeconds: 15                      
          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: true            
      volumes:
        - name: config-volume
          configMap:
            name: propmap
---
#create service for httpserver
apiVersion: v1
kind: Service
metadata:
  name: myhttpserver-svc
spec:
  type: ClusterIP
  ports:
    - port: 9095
      targetPort: 9090
      protocol: TCP
      name: http     
  selector:
    app: myhttpserver
---
#create ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  tls:
    - hosts:
       - myhttpserver.com
      secretName: myhttpserver-tls
  rules:
     - host: myhttpserver.com
       http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: myhttpserver-svc
                port:
                  number: 9095
